--- a/index.css
+++ b/index.css
@@ -1,22 +1,21 @@
 body {
     font-family: 'Space Grotesk', sans-serif;
     background-color: #f8f9fa;
+    margin: 0;
 }
 
 
 .container {
     width: 90%;
-    max-width: 800px;
     margin: 0 auto;
 }
 
-nav a {
-    color: #fefae0;
-    font-size: 1.125rem;
-    display: block;
-    padding: 1em 0;
-    cursor: pointer;
+
+
+ul li {
+    display: inline;
 }
+
 
 ul {
     padding: 0;
@@ -24,105 +23,179 @@ ul {
     list-style-type: none;
 }
 
-header {
-    display: flex;
-    justify-content: flex-end;
+.btn:hover {
+    background-color: #7f5539;
+    color: #fcf6bd;
 }
-
-header div {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-
-
 
 
 /* ***********************************************************[  Media queries  ]******************************************* */
 
 
-@media (max-width: 480px) {
+@media (max-width: 767px) {
 
-header {
-    display:flex;
-    background-color: #bc6c25;
-    color: #fefae0;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin: 1em;
+    header {
+        display: flex;
+        background-color: #bc6c25;
+        color: #fefae0;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin: 1em;
+    }
+
+    nav a {
+        color: #fefae0;
+        font-size: 1.125rem;
+        display: block;
+        padding: 1em 0;
+        cursor: pointer;
+    }
+
+    ul {
+        width: 100%;
+    }
+
+    li:not(:last-child) {
+        display: block;
+        border-bottom: 1px dotted #283618;
+    }
+
+    li {
+        list-style: none;
+    }
+
+    .main-image {
+        width: 100%;
+        background-size: cover;
+        border-radius: 0.5rem;
+    }
+
+    h1 {
+        font-size: 2rem;
+        font-weight: 700;
+    }
+
+    .subheading {
+        display: block;
+        font-weight: 300;
+        font-size: 0.00000125rem;
+    }
+
+
+
+    .btn {
+        display: block;
+        background-color: #472d30;
+        color: #fcf6bd;
+        text-decoration: none;
+        padding: 1em 2em;
+        text-align: center;
+        margin-bottom: 1em;
+        font-weight: 700;
+        border: 0.2em solid #fcf6bd;
+        border-radius: 0.5rem;
+        cursor: pointer;
+    }
+
+    .btn-div {
+        margin-top: auto;
+    }
+
+    .main-section {
+        margin: 0 1em;
+    }
+
+    .p-text {
+        font-size: 0.5rem;
+        line-height: 1.5;
+        display: block;
+        margin-top: 0;
+    }
+
+    .h5-intro {
+        margin-top: 1em;
+    }
+
 }
 
-ul {
-    width: 100%;
+@media(min-width:768px) {
+
+
+    header {
+        background-color: #bc6c25;
+        color: #fefae0;
+    }
+
+    div span {
+        display: block;
+        font-size: 1rem;
+        font-weight: 300;
+    }
+
+    .container {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    ul {
+        margin-right: 4em;
+    }
+
+    nav a {
+        margin-left: 1em;
+        cursor: pointer;
+    }
+
+    nav a:hover {
+        color: #fec89a;
+    }
+
+    nav a:active {
+        color: #ddb892;
+    }
+
+    h1 {
+        margin-left: 2em;
+    }
+
+    h5 {
+        margin-left: 4.5em;
+    }
+
+    p {
+        margin-left: 3.75em;
+    }
+
+    .btn-div {
+        display: flex;
+        justify-content: flex-start;
+        gap: 2em;
+        margin: 1em 4em 1em;
+    }
+
+    .btn {
+        display: inline-block;
+        background-color: #472d30;
+        color: #fcf6bd;
+        text-decoration: none;
+        padding: 1em 2em;
+        text-align: center;
+        margin-bottom: 1em;
+        font-weight: 700;
+        border-radius: 0.5rem;
+        cursor: pointer;
+    }
+
+    .main-image {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
+        background-size: cover;
+        border-radius: 0.5rem;
+    }
+
 }
-
-li:not(:last-child){
-   
-    display: block;
-    border-bottom: 1px dotted #283618;
-}
-
-li {
-    list-style: none;
-}
-
-.main-image {
-    width: 100%;
-    background-size: cover;
-    margin-top: 1em;
-    border: 0.2em solid #fcf6bd;
-    border-radius: 0.5rem;
-}
-
-h1 {
-    font-size: 2rem;
-    font-weight: 700;
-}
-.subheading { 
-    /* width: 50%;  */
-    display: block;
-    font-weight: 300;
-
-    font-size: 0.00000125rem;
-}
-
-
-
-.btn {
-    display: block;
-    background-color: #472d30;
-    color: #fcf6bd;
-    text-decoration: none;
-    padding: 1em 2em;
-    text-align: center;
-    margin-bottom: 1em;
-    font-weight: 700;
-    border: 0.2em solid #fcf6bd;
-    border-radius: 0.5rem;
-}
-
-
-
-
-.p-text {
-
-    font-size: 0.5rem;
-    line-height: 1.5;
-    display: block;
-    padding-top: 0px;
-}
-
-h5 {
-    display: block;
-    margin-top: 0.5em;
-}
-
-h3 {
-    margin:auto 0;
-}
-
-}
-
