--- a/index.css
+++ b/index.css
@@ -107,14 +107,15 @@ ul {
     }
 
     .p-text {
-        font-size: 0.5rem;
+        font-size: 1rem;
         line-height: 1.5;
         display: block;
         margin-top: 0;
     }
 
-    .h5-intro {
-        margin-top: 1em;
+    h5{
+        font-size: 1.5rem;
+        
     }
 
 }
